# apilane-python

./: LICENSE  README.md  pyproject.toml
apilane/: __init__.py  _base_client.py  _exceptions.py  client.py  types.py
apilane/resources/: __init__.py  _base_resource.py  models.py
apilane/resources/chat/: __init__.py  chat.py  completions.py
examples/: 01_chat.py  02_stream.py  03_vision.py  04_tool_call.py  05_batch.py
tests/: test_client.py
