 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
 name = "apilane"
 version = "0.1.0"
 description = "Official Python SDK for apilane — the cheapest way to call GPT-4o, Claude, and DeepSeek. Pay per call from $2."
 readme = "README.md"
 requires-python = ">=3.9"
 license = { text = "MIT" }
 authors = [{ name = "apilane", email = "ops@apilane.one" }]
 keywords = [
     "openai",
     "anthropic",
     "claude",
     "gpt-4o",
     "deepseek",
     "llm",
     "llm-api",
     "ai",
     "api-gateway",
     "chatgpt",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Typing :: Typed",
 ]
 dependencies = [
     "httpx>=0.24.0",
     "pydantic>=2.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
 ]
 
 [project.urls]
 Homepage = "https://apilane.one"
 Documentation = "https://apilane.one/docs"
Repository = "https://github.com/DHD6677/apilane-python"
Issues = "https://github.com/DHD6677/apilane-python/issues"
 
 [tool.hatch.build.targets.wheel]
 packages = ["apilane"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
